# pipc

./: CMakeLists.txt  README.md  demo.cpp
bin-linux/: CMakeCache.txt  Makefile  cmake_install.cmake  hello
bin-windows/: CMakeCache.txt  Makefile  cmake_install.cmake
linux/: README.md
linux-tests/: CMakeLists.txt  README.md  all_tests.sh  background_test  basic_process_test  basic_test  fifo_create  fifo_test_fork_rw  fifo_test_fork_wr  fifo_test_rw  fifo_test_wait_rw  fifo_test_wait_wr  fifo_test_wr  fifo_tests.sh  file_forward_test  hello  infinite  piped_process_test  process_tests.sh  run_grab_test  rw_child  shmem_test  shmem_test_rw  shmem_test_single  shmem_test_wr  shmem_tests.sh  socket_basic_test  socket_tests.sh  spare_test_rw  spare_test_wr  temp.txt  test.sh  wr_child
linux-tests/fifo/: fifo_create.cpp  fifo_test_fork_rw.cpp  fifo_test_fork_wr.cpp  fifo_test_rw.cpp  fifo_test_wait_rw.cpp  fifo_test_wait_wr.cpp  fifo_test_wr.cpp  rw_child.cpp  spare_test_rw.cpp  spare_test_wr.cpp  wr_child.cpp
linux-tests/process/: atest.sh  background_test.cpp  basic_process_test.cpp  file_forward_test.cpp  piped_process_test.cpp  run_grab_test.cpp
linux-tests/shmem/: shmem_test.cpp  shmem_test_rw.cpp  shmem_test_single.cpp  shmem_test_wr.cpp
linux-tests/socket/: basic_test.cpp  socket_basic_test.cpp
linux/pipc/: errors_and_warnings.hpp
linux/pipc/fifo/: fifo.hpp
linux/pipc/process/: background.hpp  pipe.hpp  process.hpp  process_base.hpp  process_helpers.hpp
linux/pipc/shmem/: shmem.hpp
linux/pipc/socket/: socket.hpp
minix-tests/: CMakeLists.txt  README.md  fifo_tests.sh  shmem_tests.sh
minix-tests/fifo/: fifo_create.cpp  fifo_test_rw.cpp  rw_child.cpp  spare_test_rw.cpp  spare_test_wr.cpp
minix-tests/process/: piped_process_test.cpp  run_grab_test.cpp
minix-tests/shmem/: shmem_test_rw.cpp  shmem_test_single.cpp  shmem_test_wr.cpp
minix/pipc/: errors_and_warnings.hpp
minix/pipc/fifo/: fifo.hpp
minix/pipc/shmem/: shmem.hpp
windows/: README.md
windows-tests/: CMakeLists.txt  readme.md  test.sh
windows-tests/fifo/: fifo_test.cpp
windows-tests/process/: basic_process_test.cpp  conveyor_test.cpp  file_forward_test.cpp  hello.cpp
windows-tests/shmem/: shm_basic_test.cpp  shm_share_test.cpp
windows/pipc/: errors_and_warnings.hpp
windows/pipc/fifo/: fifo.hpp
windows/pipc/process/: process.hpp  process_helpers.hpp
windows/pipc/shmem/: shmem.hpp
